refactored Category test methods